# qss

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  a.out  build.sh  file_test.cpp  graph.cpp  graph.hpp  main.cpp  nonNL.cpp  offload.cpp  optimizer.cpp  qss.cpp  sifter.cpp  test-nlopt.cpp
qss/: ReadMe.txt  qss.cpp  qss.sln  qss.vcxproj  qss.vcxproj.filters  stdafx.cpp
